--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Leitor MQTT</title>
-    <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
         h1 { color: #333; }
@@ -15,33 +14,25 @@
     <p id="data">Aguardando...</p>
 
     <script>
-        // Configuração do Broker MQTT via WebSocket (HiveMQ Cloud)
-        const broker = "wss://7f054615a7ef47f78f9f2892dbc87eac.s1.eu.hivemq.cloud:8884/mqtt";
-        const options = {
-            username: "dicewebbroker",  // Seu usuário do HiveMQ Cloud
-            password: "Dicewebbroker1", // Sua senha do HiveMQ Cloud
-            connectTimeout: 4000,
-            clean: true,
-            clientId: "web_client_" + Math.random().toString(16).substr(2, 8)
+        const socket = new WebSocket("wss://mqtt-web.onrender.com:8765");
+
+        socket.onopen = function() {
+            console.log("✅ Conectado ao WebSocket!");
         };
 
-        // Conectar ao broker MQTT
-        const client = mqtt.connect(broker, options);
+        socket.onmessage = function(event) {
+            document.getElementById("data").innerText = event.data;
+            console.log("📩 Mensagem Recebida:", event.data);
+        };
 
-        client.on("connect", function () {
-            console.log("✅ Conectado ao MQTT Broker!");
-            client.subscribe("dice", function (err) {
-                if (!err) {
-                    console.log("📡 Inscrito no tópico: dice");
-                }
-            });
-        });
+        socket.onerror = function(error) {
+            console.error("❌ Erro na conexão WebSocket:", error);
+        };
 
-        // Quando uma mensagem chega, atualiza o HTML
-        client.on("message", function (topic, message) {
-            document.getElementById("data").innerText = message.toString();
-            console.log("📩 Mensagem Recebida:", message.toString());
-        });
-
-        client.on("error", function (error) {
-            console.error("❌ Erro na conexão MQTT:",
+        socket.onclose = function() {
+            console.log("🔌 WebSocket desconectado. Tentando reconectar...");
+            setTimeout(() => location.reload(), 5000);
+        };
+    </script>
+</body>
+</html>
