--- a/index.html
+++ b/index.html
@@ -1,38 +1,20 @@
-<!DOCTYPE html>
-<html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <title>Leitor MQTT</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
-        h1 { color: #333; }
-        #data { font-size: 2em; font-weight: bold; color: blue; }
-    </style>
-</head>
-<body>
-    <h1>Último Número Recebido</h1>
-    <p id="data">Aguardando...</p>
+<script>
+    const socket = new WebSocket("wss://mqtt-web.onrender.com/ws");
 
-    <script>
-        const socket = new WebSocket("wss://mqtt-web.onrender.com:8765");
+    socket.onopen = function() {
+        console.log("✅ Conectado ao WebSocket!");
+    };
 
-        socket.onopen = function() {
-            console.log("✅ Conectado ao WebSocket!");
-        };
+    socket.onmessage = function(event) {
+        document.getElementById("data").innerText = event.data;
+        console.log("📩 Mensagem Recebida:", event.data);
+    };
 
-        socket.onmessage = function(event) {
-            document.getElementById("data").innerText = event.data;
-            console.log("📩 Mensagem Recebida:", event.data);
-        };
+    socket.onerror = function(error) {
+        console.error("❌ Erro na conexão WebSocket:", error);
+    };
 
-        socket.onerror = function(error) {
-            console.error("❌ Erro na conexão WebSocket:", error);
-        };
-
-        socket.onclose = function() {
-            console.log("🔌 WebSocket desconectado. Tentando reconectar...");
-            setTimeout(() => location.reload(), 5000);
-        };
-    </script>
-</body>
-</html>
+    socket.onclose = function() {
+        console.log("🔌 WebSocket desconectado.");
+    };
+</script>
